2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/SearchMusicWindow.glade:
	* data/muine.schemas.in:
	* src/FileSelector.cs:
	* src/PlaylistWindow.cs:
	* src/SearchMusicWindow.cs:

	The first time window will now check if ~/Music exists,
	and use that if it does. Otherwise it will search the homedir.

	Also set the deafult playlist filesel folders to ~/Playlists/

2004-01-22  Viet Yen Nguyen  <nguyen@cs.utwente.nl>
            Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/Makefile.am:
	* data/glade/SearchMusicWindow.glade:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/SearchMusicWindow.cs:
	* src/SongDatabase.cs:

	First time "Search music" window.

2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/rb-cell-renderer-pixbuf.c:
	(rb_cell_renderer_pixbuf_render):

	Replace deprecated gdk_pixbuf_render_to_drawable_alpha

2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/PlaylistWindow.glade:
	* src/PlaylistWindow.cs:

	Get rid of messy volume menu.

2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* configure.in:
	* libmuine/Makefile.am:

	Better check for libid3tag.

2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/SkipToWindow.glade:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/SkipToWindow.cs:
	* src/StringUtils.cs:

	Nicer seeking window. 

	Based on a patch by Viet Yen Nguyen <nguyen@cs.utwente.nl>
	
	* libmuine/db.c: (db_foreach):

	Fix gcc 2.96 bug.

2004-01-21  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added cs (Czech) to ALL_LINGUAS.

2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/ErrorDialog.glade:
	* data/glade/Makefile.am:
	* data/glade/PlaylistWindow.glade:
	* data/glade/YesNoDialog.glade:
	* data/muine.schemas.in:
	* src/ErrorDialog.cs:
	* src/FileSelector.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/YesNoDialog.cs:

	Playlist open/save.

2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/PlaylistWindow.glade:

	Menu rearrangement.
